# brewhouse-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  app.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: brew.rs  catalog.rs  lib.rs  main.rs  models.rs
src/components/feedback/: ToastProvider.tsx  toast.css
src/components/package/: AppCard.tsx  DetailProvider.tsx  PackageDrawer.tsx  PackageIcon.tsx  PackageListSkeleton.tsx  PackageRow.tsx  appstore.css  drawer.css  package.css
src/components/shell/: ConsoleDrawer.tsx  Sidebar.tsx  ViewShell.tsx  console.css  sidebar.css
src/components/ui/: Icon.tsx  index.tsx  ui.css
src/data/: BrewDataProvider.tsx
src/hooks/: usePackageActions.ts  useResource.ts  useTheme.tsx
src/jobs/: JobsProvider.tsx
src/lib/: api.ts  format.ts  nav.ts  types.ts
src/styles/: global.css  tokens.css
src/views/: DiscoverView.tsx  InstalledView.tsx  TapsView.tsx  UpdatesView.tsx  views.css
