[package]
name = "brewhouse"
version = "0.2.1"
description = "Brewhouse — a beautiful desktop GUI for Homebrew"
authors = ["Brewhouse"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "brewhouse_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
